--- a/themes/matery/layout/_partial/post-detail.ejs
+++ b/themes/matery/layout/_partial/post-detail.ejs
@@ -161,7 +161,9 @@
             <% } %>
         </div>
     </div>
-
+    <% if (theme.utteranc && theme.utteranc.enable) { %>
+        <%- partial('_partial/utteranc') %>
+        <% } %>
     <% if (theme.gitalk && theme.gitalk.enable) { %>
         <%- partial('_partial/gitalk') %>
     <% } %>
