--- a/themes/matery/layout/_partial/head.ejs
+++ b/themes/matery/layout/_partial/head.ejs
@@ -79,4 +79,17 @@
 
     <script src="<%- theme.jsDelivr.url %><%- url_for(theme.libs.js.jquery) %>"></script>
 
+    <script type="text/javascript">
+        (function() {
+            var utterances = document.createElement('script');
+            utterances.type = 'text/javascript';
+            utterances.async = true;
+            utterances.setAttribute('issue-term','pathname')
+            utterances.setAttribute('theme','github-light')
+            utterances.setAttribute('repo','mcchampions/mcchampions.github.io')
+            utterances.crossorigin = 'anonymous';
+            utterances.src = 'https://utteranc.es/client.js';
+            document.getElementById('utteranc-container').appendChild(utterances);
+        })();
+    </script>
 </head>
