--- a/themes/matery/layout/_partial/footer.ejs
+++ b/themes/matery/layout/_partial/footer.ejs
@@ -110,3 +110,16 @@
 </footer>
 
 <div class="progress-bar"></div>
+<script type="text/javascript">
+    (function () {
+        const utterances = document.createElement('script');
+        utterances.type = 'text/javascript';
+        utterances.async = true;
+        utterances.setAttribute('issue-term', 'pathname')
+        utterances.setAttribute('theme', 'github-light')
+        utterances.setAttribute('repo', 'mcchampions/mcchampions.github.io')
+        utterances.crossorigin = 'anonymous';
+        utterances.src = 'https://utteranc.es/client.js';
+        document.getElementById('utteranc-container').append(utterances);
+    })();
+</script>
