--- a/themes/matery/layout/_partial/footer.ejs
+++ b/themes/matery/layout/_partial/footer.ejs
@@ -115,7 +115,7 @@
         const utterances = document.createElement('script');
         utterances.type = 'text/javascript';
         utterances.async = true;
-        utterances.setAttribute('issue-term', 'pathname')
+        utterances.setAttribute('issue-term', 'title')
         utterances.setAttribute('theme', 'github-light')
         utterances.setAttribute('repo', 'mcchampions/mcchampions.github.io')
         utterances.crossorigin = 'anonymous';
